--- a/package.json
+++ b/package.json
@@ -17,18 +17,34 @@
     "gasLimit": "6200000"
   },
   "dependencies": {
-    "dxswap-core": "git://github.com/levelkdev/dxswap-core.git#v0.3.0"
+    "@ethersproject/constants": "^5.0.7",
+    "@ethersproject/providers": "^5.0.17",
+    "@gnosis.pm/owl-token": "^4.0.0",
+    "@gnosis.pm/solidity-data-structures": "^1.3.5",
+    "@nomiclabs/hardhat-ganache": "^2.0.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@openzeppelin/contracts": "^3.3.0",
+    "dxswap-core": "git://github.com/levelkdev/dxswap-core.git#v0.3.1",
+    "dxswap-periphery": "git://github.com/levelkdev/dxswap-periphery.git#v0.3.2",
+    "solidity-bytes-utils": "^0.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contract-loader": "^0.6.1",
     "@truffle/contract": "^4.2.21",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.0.4",
+    "@types/node": "^14.14.10",
     "babel-eslint": "^10.1.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "bignumber.js": "^5.0.0",
+    "chai": "^4.2.0",
     "cross-conf-env": "^1.1.2",
     "default-options": "^1.0.0",
     "dotenv": "^8.2.0",
@@ -40,7 +56,11 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-standard": "^3.0.1",
+    "ethereum-waffle": "^3.2.1",
     "ethereumjs-abi": "^0.6.5",
+    "ethereumjs-util": "^6.2.0",
+    "ethers": "^5.0.23",
+    "hardhat": "^2.0.4",
     "pm2": "^2.9.3",
     "promisify": "^0.0.3",
     "pug": "^2.0.0-rc.4",
@@ -53,15 +73,16 @@
     "uint32": "^0.2.1"
   },
   "scripts": {
-    "lint": "yarn prettier ./test/*.ts --check",
-    "lint:fix": "yarn prettier ./test/*.ts --write",
+    "lint": "yarn prettier ./test/*.js --check",
+    "lint:fix": "yarn prettier ./test/*.js --write",
     "flattener": "./scripts/flattener.sh",
-    "test": "./scripts/test.sh",
+    "test": "npx hardhat test",
     "testnet": "./scripts/testnet.sh",
-    "coverage": "./scripts/coverage.sh",
+    "coverage": "hardhat --network coverage coverage",
     "solhint": "solhint contracts/**/*.sol",
-    "build": "rimraf build && truffle compile",
-    "prettier": "prettier --write contracts/**/*.sol"
+    "build": "rimraf artifacts && rimraf cache && npx hardhat compile",
+    "prettier": "prettier --write contracts/**/*.sol",
+    "clean": "rimraf artifacts && rimraf cache && rimraf coverage && rimraf coverage.json"
   },
   "license": "GPL-3.0-or-later"
 }
