--- a/package.json
+++ b/package.json
@@ -9,13 +9,6 @@
     "type": "git",
     "url": "https://github.com/nicoelzer/gnosis-protocol-relayer"
   },
-  "files": [
-    "build",
-    "contracts"
-  ],
-  "config": {
-    "gasLimit": "6200000"
-  },
   "dependencies": {
     "@ethersproject/constants": "^5.0.7",
     "@ethersproject/providers": "^5.0.17",
@@ -29,57 +22,26 @@
     "solidity-bytes-utils": "^0.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/contract-loader": "^0.6.1",
-    "@truffle/contract": "^4.2.21",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.4",
-    "@types/node": "^14.14.10",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "bignumber.js": "^5.0.0",
     "chai": "^4.2.0",
-    "cross-conf-env": "^1.1.2",
-    "default-options": "^1.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^5.16.0",
-    "eslint-config-defaults": "^9.0.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-standard": "^3.0.1",
     "ethereum-waffle": "^3.2.1",
-    "ethereumjs-abi": "^0.6.5",
-    "ethereumjs-util": "^6.2.0",
     "ethers": "^5.0.23",
     "hardhat": "^2.0.4",
-    "pm2": "^2.9.3",
-    "promisify": "^0.0.3",
-    "pug": "^2.0.0-rc.4",
+    "prettier": "^2.2.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.1",
     "rimraf": "^2.6.2",
-    "run-with-ganache": "^0.1.1",
     "solhint": "^3.1.0",
-    "solidity-coverage": "^0.7.10",
-    "truffle": "^5.1.28",
-    "truffle-hdwallet-provider": "^1.0.17",
-    "uint32": "^0.2.1"
+    "solidity-coverage": "^0.7.10"
   },
   "scripts": {
     "lint": "yarn prettier ./test/*.js --check",
     "lint:fix": "yarn prettier ./test/*.js --write",
-    "flattener": "./scripts/flattener.sh",
     "test": "npx hardhat test",
-    "testnet": "./scripts/testnet.sh",
     "coverage": "hardhat --network coverage coverage",
-    "solhint": "solhint contracts/**/*.sol",
     "build": "rimraf artifacts && rimraf cache && npx hardhat compile",
     "prettier": "prettier --write contracts/**/*.sol",
     "clean": "rimraf artifacts && rimraf cache && rimraf coverage && rimraf coverage.json"
